[package]
name = "wolf_meeting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
juniper = "0.15.11"
serde_json = "1.0.105"
tokio = "1.32.0"
tokio-postgres = { version = "0.5", features = ["with-uuid-0_8"] }
uuid = { version = "0.8", features = ["v4"] }
warp = "0.3.5"
